# c-template

./: .gitignore  CMakeLists.txt  Makefile  README  debug.h  libmyapi.dylib  libtclmyapi.dylib  main.c  myapi.c  myapi.h  options.c  options.h  py_extension.c  setup.py  tcl_extension.c  template.org  test.tcl  test_py_extension.py
